<resources>
    <string name="app_name">Herbify App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="discover_the_power_of_herbal_wellness">Discover the power of herbal wellness</string>
    <string name="logo_herbify">logo herbify</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button_register">button register</string>
    <string name="register">Register</string>

    <string name="already_have_account_login">Already have account? <font color="#687316">login</font></string>
    <string name="picture_herbal">picture herbal</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="dive_into_the_realm_of_herbal_wellness">Dive into the realm of herbal wellness</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_register">Don\'t have account? <font color="#687316">register</font></string>
    <string name="picture_otp">picture OTP</string>
    <string name="the_verification_code_has_been_sent_via_email">The verification code has been sent via email u**r@g****.**m</string>
    <string name="code">0</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="button_chatbot">button chatbot</string>
    <string name="button_scan">button scan</string>
    <string name="button_chatdoc">button chatdoc</string>
    <string name="scan">Scan</string>
    <string name="chat_herbal">Chat Herbal</string>
    <string name="herbaldoc">HerbalDoc</string>
    <string name="yang_mungkin_ingin_anda_ketahui">Yang mungkin ingin anda ketahui</string>
    <string name="ginger">Ginger</string>
    <string name="produk_yang_mungkin_anda_cari">Produk yang mungkin anda cari</string>
    <string name="name_doctor">Dr. Lorem Ipsum Dolor Sit</string>
    <string name="tahun">2 Tahun</string>
    <string name="harga">Rp50.000</string>
    <string name="rating">4.9</string>
    <string name="name_profil">Lorem Ipsumdolor Sit</string>
    <string name="address">Malang, Jawa Timur</string>
    <string name="profil">profil</string>
    <string name="description_post">Kayu manis atau dengan nama ilmiah Cinnamomum ialah jenis pohon penghasil rempah-rempah. di dalam kamus Biologi, Cinnamomum zeylanicum Termasuk ke dalam jenis rempah-rempah yang dihasilkan dari kulit bagian dalam yang kering, yang amat beraroma, manis, dan pedas</string>
    <string name="favorite_count">100</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Judul</string>
    <string name="star_icon">star icon</string>
    <string name="picture_post">Picture post</string>
    <string name="icon_favorite">Icon favorite</string>
    <string name="icon_share">Icon share</string>
    <string name="judul">Judul</string>
    <string name="ilmiah_name">Ilmiah name</string>
    <string name="gambar_item">Gambar item</string>
    <string name="button_login_google">Button login google</string>
    <string name="or">or</string>
    <string name="herbapedia">HerbaPedia</string>
    <string name="herbatalk">HerbaTalk</string>
    <string name="account">Account</string>
    <string name="background">background</string>
    <string name="judul_postingan">Judul postingan</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="masukkan_judul_artikel">Masukkan judul artikel</string>
    <string name="gambar_artikel">Gambar artikel</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="masukkan_deskripsi_artikel">Masukkan deskripsi artikel</string>
    <string name="tag">Tag</string>
    <string name="scroll_view_add_post">scroll view add post</string>
    <string name="posting">Posting</string>
    <string name="waktu">00.00 WIB</string>
    <string name="tanggal">11 Desember 2023</string>
    <string name="gambar_herbal">gambar herbal</string>
    <string name="manfaat">Manfaat</string>
    <string name="manfaatnya">manfaatnya</string>
    <string name="wrong_otp">Kode OTP tidak valid</string>
    <string name="not_ket_otp">Belum menerima kode?</string>
    <string name="resend_otp">Kirim lagi</string>
    <string name="retry">Muat ulang</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>