<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_profil"
                android:contentDescription="@string/profil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profil_doctor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/name_profil"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/iv_profil"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/address"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/iv_profil"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:text="@string/description_post"
            android:maxLines="3"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_picture_post"
            android:contentDescription="@string/picture_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/pict_post"
            android:background="@drawable/bg_rounded_item"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_favorite"
                android:contentDescription="@string/icon_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_favorite_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/favorite_count"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/ic_favorite"
                app:layout_constraintStart_toEndOf="@+id/ic_favorite"
                app:layout_constraintTop_toTopOf="@+id/ic_favorite" />

            <ImageView
                android:id="@+id/ic_share"
                android:contentDescription="@string/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>