<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_light"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_profil_doctor"
            android:contentDescription="@string/profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profil_doctor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/name_doctor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_tahun"
            app:layout_constraintStart_toEndOf="@+id/iv_profil_doctor" />

        <TextView
            android:id="@+id/tv_tahun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tahun"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_profil_doctor"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/ic_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_baseline_star_24"
            android:contentDescription="@string/star_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_tahun"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_doctor"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/rating"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/ic_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_doctor"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/harga"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/iv_profil_doctor"
            app:layout_constraintTop_toBottomOf="@+id/tv_tahun"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>