<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:scrollbars="none"
    tools:context=".ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_sign_up_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sign_up_now"
        android:textColor="@color/green_moss"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/discover_the_power_of_herbal_wellness"
        android:textColor="@color/green_moss"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_now" />

    <ImageView
        android:id="@+id/iv_logo_register"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/picture_herbal"
        android:src="@drawable/pict_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_discover"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintWidth="350dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_15"
            android:hint="@string/name"
            android:autofillHints="name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintWidth="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="40dp"
            android:background="@drawable/bg_rounded_15"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintWidth="350dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_15"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_opsi_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="@+id/til_password"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_google"
            android:contentDescription="@string/button_login_google"
            app:layout_constraintEnd_toEndOf="@+id/tv_opsi_login"
            app:layout_constraintStart_toStartOf="@+id/tv_opsi_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_opsi_login"
            tools:ignore="RedundantDescriptionCheck" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:gravity="center"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:textColor="@color/broken_white"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/already_have_account_login"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="25dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
